Fix table border collapse

--- a/scss/_blocks.scss
+++ b/scss/_blocks.scss
@@ -117,14 +117,11 @@ ul.wp-block-latest-posts.is-grid.alignwide {
   padding: 0 14px;
 }
 
-.wp-block-table {
+.wp-block-table table {
   display: table;
   overflow-x: auto;
   border-collapse: collapse;
   width: 100%
-}
-
-table.wp-block-table {
 }
 
 .wp-block-table td, .wp-block-table th {
